--- a/photo.html
+++ b/photo.html
@@ -19,7 +19,7 @@
                     <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
                     <source media="(min-width: 640px)" srcset="img/logo-pink-white-tablet.svg">
                     <img class="main-nav__app-name" width="75" height="22" src="img/logo-pink-white-mobile.svg"
-                    alt="Логотип PINK">
+                    alt="Logo PINK">
                 </picture>
                 <button class="main-nav__toggle" type="button"></button>
               </div>
@@ -46,7 +46,7 @@
               <picture class="gallery__photo">
                 <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg">
                 <source media="(min-width: 640px)" srcset="img/panorama-tablet@1x.jpg">
-                <img src="img/panorama-mobile@1x.jpg">
+                <img src="img/panorama-mobile@1x.jpg" alt="Panorama">
               </picture>
               <div class="gallery__content-wrapper">
               <header class="gallery__item-header">
@@ -62,7 +62,7 @@
               <picture class="gallery__photo">
                 <source media="(min-width: 960px)" srcset="img/photo-1-desktop@1x.jpg">
                 <source media="(min-width: 640px)" srcset="img/photo-1-tablet@1x.jpg">
-                <img src="img/photo-1-mobile@1x.jpg">
+                <img src="img/photo-1-mobile@1x.jpg" alt="Car">
               </picture>
               <div class="gallery__content-wrapper">
               <header class="gallery__item-header">
@@ -78,7 +78,7 @@
                 <picture class="gallery__photo">
                   <source media="(min-width: 960px)" srcset="img/photo-2-desktop@1x.jpg">
                   <source media="(min-width: 640px)" srcset="img/photo-2-tablet@1x.jpg">
-                  <img src="img/photo-2-mobile@1x.jpg">
+                  <img src="img/photo-2-mobile@1x.jpg" alt="Drum">
                 </picture>
               <div class="gallery__content-wrapper">
               <header class="gallery__item-header">
@@ -94,7 +94,7 @@
                 <picture class="gallery__photo">
                   <source media="(min-width: 960px)" srcset="img/photo-3-desktop@1x.jpg">
                   <source media="(min-width: 640px)" srcset="img/photo-3-tablet@1x.jpg">
-                  <img src="img/photo-3-mobile@1x.jpg">
+                  <img src="img/photo-3-mobile@1x.jpg" alt="Window">
                 </picture>
               <div class="gallery__content-wrapper">
               <header class="gallery__item-header">
@@ -110,7 +110,7 @@
                 <picture class="gallery__photo">
                   <source media="(min-width: 960px)" srcset="img/photo-4-desktop@1x.jpg">
                   <source media="(min-width: 640px)" srcset="img/photo-4-tablet@1x.jpg">
-                  <img src="img/photo-4-mobile@1x.jpg">
+                  <img src="img/photo-4-mobile@1x.jpg" alt="Market">
                 </picture>
               <div class="gallery__content-wrapper">
               <header class="gallery__item-header">
@@ -126,7 +126,7 @@
                 <picture class="gallery__photo">
                   <source media="(min-width: 960px)" srcset="img/photo-5-desktop@1x.jpg">
                   <source media="(min-width: 640px)" srcset="img/photo-5-tablet@1x.jpg">
-                  <img src="img/photo-5-mobile@1x.jpg">
+                  <img src="img/photo-5-mobile@1x.jpg" alt="Rock">
                 </picture>
               <div class="gallery__content-wrapper">
               <header class="gallery__item-header">
@@ -142,7 +142,7 @@
                 <picture class="gallery__photo">
                   <source media="(min-width: 960px)" srcset="img/photo-6-desktop@1x.jpg">
                   <source media="(min-width: 640px)" srcset="img/photo-6-tablet@1x.jpg">
-                  <img src="img/photo-6-mobile@1x.jpg">
+                  <img src="img/photo-6-mobile@1x.jpg" alt="Flight">
                 </picture>
               <div class="gallery__content-wrapper">
               <header class="gallery__item-header">
@@ -166,24 +166,24 @@
                 <picture class="gallery__photo">
                     <source media="(min-width: 960px)" srcset="img/photo-7-desktop@1x.jpg">
                     <source media="(min-width: 640px)" srcset="img/photo-7-tablet@1x.jpg">
-                    <img  class="photo-constructor__constructor-object" src="img/photo-7-mobile@1x.jpg" width="280px" height="374px">
+                    <img  class="photo-constructor__constructor-object" src="img/photo-7-mobile@1x.jpg" width="280" height="374" alt="Winter">
                 </picture>
               <fieldset class="photo-constructor__tools">
                 <div class="photo-constructor__control">
                     <button type="button" class="photo-constructor__pruning active">
-                        <svg version="1" width="48" height="48" viewBox="0 0 48 48">
+                        <svg width="48" height="48" viewBox="0 0 48 48">
                             <path fill="none" d="M0 0h48v48H0V0z"/>
                             <path d="M34 30h4V14c0-2.21-1.79-4-4-4H18v4h16v16zm-20 4V2h-4v8H2v4h8v20c0 2.21 1.79 4 4 4h20v8h4v-8h8v-4H14z"/>
                         </svg>
                     </button>
                     <button type="button" class="photo-constructor__colors">
-                        <svg version="1" width="48" height="48" viewBox="0 0 48 48">
+                        <svg width="48" height="48" viewBox="0 0 48 48">
                             <path fill="none" d="M0 0h48v48H0V0z"/>
                             <path d="M33.12 17.88L15.24 0l-2.83 2.83 4.76 4.76L6.88 17.88c-1.17 1.17-1.17 3.07 0 4.24l11 11c.58.59 1.35.88 2.12.88s1.54-.29 2.12-.88l11-11c1.17-1.17 1.17-3.07 0-4.24zM10.41 20L20 10.42 29.59 20H10.41zM38 23s-4 4.33-4 7c0 2.21 1.79 4 4 4s4-1.79 4-4c0-2.67-4-7-4-7zM0 40h48v3H0z"/>
                         </svg>
                     </button>
                     <button type="button" class="photo-constructor__contrast">
-                        <svg version="1" xmlns="http://www.w3.org/2000/svg" width="31.92" height="31.92" viewBox="-35.422 -7.96 31.92 31.92">
+                        <svg width="31.92" height="31.92" viewBox="-35.422 -7.96 31.92 31.92">
                             <path d="M-19.462-3.96c6.595 0 11.96 5.365 11.96 11.96s-5.365 11.96-11.96 11.96-11.96-5.365-11.96-11.96 5.365-11.96 11.96-11.96m0-4c-8.814 0-15.96 7.145-15.96 15.96 0 8.813 7.146 15.96 15.96 15.96S-3.502 16.813-3.502 8c0-8.815-7.146-15.96-15.96-15.96z"/>
                             <path d="M-19.462 16.33c4.706 0 8.52-3.812 8.52-8.52 0-4.704-3.813-8.518-8.52-8.518"/>
                         </svg>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="photo-constructor__buttons-wrapper">
                     <input class="photo-constructor__btn-post" type="submit" value="Запостить">
-                    <button type="button" class="photo-constructor__btn-cancel">Отмена</button>    
+                    <button type="button" class="photo-constructor__btn-cancel">Отмена</button>
                 </div>
               </fieldset>
             </form>
@@ -211,7 +211,7 @@
           <picture>
             <source media="(min-width: 960px)" srcset="img/logo-pink-blue-desktop.svg">
             <img class="page-footer__app-logo" width="147" height="41" src="img/logo-pink-blue-mobile.svg"
-            alt="Логотип PINK">
+            alt="Logo PINK">
           </picture>
           <div class="social-links">
             <a class="social-links__item social-links__item--tw" href="https://twitter.com"></a>
@@ -221,7 +221,7 @@
           <p class="page-footer__copyright">
             Разработано:
             <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-                <svg class="page-footer__copyright-logo" width="27" height="34" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <svg class="page-footer__copyright-logo" width="27" height="34" version="1.0" id="Layer_1" x="0px" y="0px"
                 fill="#d22856" viewbox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
                 <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334
                   l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5
