--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@
                     <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
                     <source media="(min-width: 640px)" srcset="img/logo-pink-white-tablet.svg">
                     <img class="main-nav__app-name" width="75" height="22" src="img/logo-pink-white-mobile.svg"
-                    alt="Логотип PINK">
+                    alt="Logo PINK">
                 </picture>
                 <button class="main-nav__toggle" type="button"></button>
               </div>
@@ -98,7 +98,6 @@
                 <div class="competition-form__input-decor competition-form__input-decor--phone"></div>
             </div>
             <label for="phone" class="competition-form__label-up competition-form__label-up--other-view">Номер телефона</label>
-            <!-- <svg class="competition-form__input-image" width="25" height="25"><use xlink:href="/img/symbols.svg#icon-phone"></use></svg> -->
           </div>
           <div class="competition-form__text-input-wrapper contest-form__text-input-wrapper--mail">
             <label for="mail-m" class="competition-form__label-up competition-form__label-up--mobile-view">Адресок почты</label>
@@ -108,7 +107,6 @@
                 <div class="competition-form__input-decor competition-form__input-decor--mail"></div>
             </div>
             <label for="mail" class="competition-form__label-up competition-form__label-up--other-view">Адрес почты</label>
-            <!-- <svg class="competition-form__input-image" width="25" height="25"><use xlink:href="/img/symbols.svg#icon-mail"></use></svg> -->
           </div>
         </div>
 
@@ -142,7 +140,7 @@
       <picture>
         <source media="(min-width: 960px)" srcset="img/logo-pink-blue-desktop.svg">
         <img class="page-footer__app-logo" width="147" height="41" src="img/logo-pink-blue-mobile.svg"
-        alt="Логотип PINK">
+        alt="Logo PINK">
       </picture>
       <div class="social-links">
         <a class="social-links__item social-links__item--tw" href="https://twitter.com"></a>
@@ -152,7 +150,7 @@
       <p class="page-footer__copyright">
         Разработано:
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg class="page-footer__copyright-logo" width="27" height="34" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg class="page-footer__copyright-logo" width="27" height="34" version="1.0" id="Layer_1" x="0px" y="0px"
             fill="#d22856" viewbox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
             <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334
               l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5
