--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
                   <source media="(min-width: 640px)" srcset="img/logo-pink-white-tablet.svg">
                   <img class="main-nav__app-name" width="75" height="22" src="img/logo-pink-white-mobile.svg"
-                  alt="Логотип PINK">
+                  alt="Logo PINK">
               </picture>
               <button class="main-nav__toggle" type="button"></button>
             </div>
@@ -70,16 +70,16 @@
     <div class="features__images">
         <picture class="features__image features__image--1">
           <source media="(min-width: 960px)" srcset="img/iphone-screen-1-desktop@1x.png 1x, img/iphone-screen-1-desktop@2x.png 2x">
-          <img src="img/iphone-screen-mobile@1x.png" alt="Смартфон">
+          <img src="img/iphone-screen-mobile@1x.png" alt="Smartphone">
         </picture>
         <picture class="features__image features__image--2">
           <source media="(min-width: 960px)" srcset="img/iphone-screen-2-desktop@1x.png 1x, img/iphone-screen-2-desktop@2x.png 2x">
-          <img src="img/iphone-screen-mobile@1x.png" alt="Смартфон">
+          <img src="img/iphone-screen-mobile@1x.png" alt="Smartphone">
         </picture>
         <picture class="features__image features__image--3">
           <source media="(min-width: 960px)" srcset="img/iphone-screen-3-desktop@1x.png 1x, img/iphone-screen-3-desktop@2x.png 2x">
           <source media="(min-width: 640px)" srcset="img/iphone-screen-3-tablet@1x.png 1x, img/iphone-screen-3-tablet@2x.png 2x">
-          <img src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x" alt="Смартфон">
+          <img src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x" alt="Smartphone">
         </picture>
     </div>
     </div>
@@ -228,7 +228,7 @@
     <picture>
       <source media="(min-width: 960px)" srcset="img/logo-pink-blue-desktop.svg">
       <img class="page-footer__app-logo" width="147" height="41" src="img/logo-pink-blue-mobile.svg"
-      alt="Логотип PINK">
+      alt="Logo PINK">
     </picture>
     <div class="social-links">
       <a class="social-links__item social-links__item--tw" href="https://twitter.com"></a>
@@ -238,7 +238,7 @@
     <p class="page-footer__copyright">
       Разработано:
       <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-      <svg class="page-footer__copyright-logo" width="27" height="34" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <svg class="page-footer__copyright-logo" width="27" height="34" version="1.0" id="Layer_1" x="0px" y="0px"
         fill="#d22856" viewbox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
       <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334
         l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5
