--- a/photo.html
+++ b/photo.html
@@ -162,7 +162,7 @@
             </p>
         </section>
           <section class="photo-constructor">
-            <form class="photo-constructor__form block-wrapper" action="">
+            <form class="photo-constructor__form block-wrapper">
                 <picture class="gallery__photo">
                     <source media="(min-width: 960px)" srcset="img/photo-7-desktop@1x.jpg">
                     <source media="(min-width: 640px)" srcset="img/photo-7-tablet@1x.jpg">
