--- a/form.html
+++ b/form.html
@@ -162,6 +162,21 @@
       </p>
     </footer>
 
+    <div class="modal" style="display:none">
+        <h3 class="modal__title">Что-то пошло не так!</h3>
+        <p class="modal__content">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="modal__button">Ok</button>
+    </div>
+
+    <div class="modal modal--success">
+        <h3 class="modal__title">Ваша заявка отправлена</h3>
+        <p class="modal__content">Спасибо за ваше участие, ваша заявка уже поступила к нам.
+            В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+        <div class="modal__button-wrapper">
+            <button class="modal__button">Закрыть окно </button>
+        </div>
+    </div>
+
   </div>
   <script>
     var navMain = document.querySelector(' .main-nav');
