--- a/form.html
+++ b/form.html
@@ -37,9 +37,11 @@
 
     <main class="main-container">
 
-        <p class="competition-form__head-rule block-wrapper">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
-            <span class="competition-form__rule-ask">Пожалуйста, заполните форму ниже:</span>
+      <div class="head-rule">
+        <p class="head-rule__content block-wrapper">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
+            <span class="head-rule__ask">Пожалуйста, заполните форму ниже:</span>
         </p>
+      </div>
 
       <form method="post" class="competition-form" id="form">
 
