--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <header class="page-header page-header--clean">
-        <nav class="main-nav  main-nav--closed main-nav--nojs">
+        <nav class="main-nav main-nav--closed main-nav--nojs main-nav--index">
           <div class="main-nav__wrapper">
             <div class="main-nav__logo">
               <picture>
@@ -28,7 +28,9 @@
             </ul>
           </div>
         </nav>
+    </header>
 
+    <main class="main-container">
         <section class="download">
           <div class="download__wrapper block-wrapper">
           <div class="download__content">
@@ -43,9 +45,6 @@
           </div>
           </div>
         </section>
-    </header>
-
-    <main class="main-container">
       <div class="index-page-intro block-wrapper">
         <p class="index-page-intro__slogan index-page-intro__slogan--phrase1">Устали от серости мегаполиса?</p>
         <p class="index-page-intro__slogan index-page-intro__slogan--phrase2">Нам есть, что вам предложить!</p>
@@ -104,7 +103,8 @@
         <ul class="reviews__slides slider__slides">
           <li class="reviews__slide slider__slide">
             <blockquote class="reviews-slide__wrapper">
-              <cite class="reviews-slide__auhor-name">Николай Петров<br>
+              <cite class="reviews-slide__auhor-name">
+                <div>Николай Петров</div>
               <span class="reviews-slide__info">25 лет, водитель трамвая</span></cite>
               <p class="reviews-slide__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
                 А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
@@ -112,7 +112,8 @@
           </li>
           <li class="reviews__slide slider__slide">
             <blockquote class="reviews-slide__wrapper">
-              <cite class="reviews-slide__auhor-name">Миша Песков<br>
+              <cite class="reviews-slide__auhor-name">
+                  <div>Миша Песков</div>
               <span class="reviews-slide__info">25 лет, водитель трамвая</span></cite>
               <p class="reviews-slide__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
                 А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
@@ -120,7 +121,8 @@
           </li>
           <li class="reviews__slide slider__slide">
             <blockquote class="reviews-slide__wrapper">
-              <cite class="reviews-slide__auhor-name">Петр матросов<br>
+              <cite class="reviews-slide__auhor-name">
+                  <div>Петр матросов</div>
               <span class="reviews-slide__info">25 лет, водитель трамвая</span></cite>
               <p class="reviews-slide__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
                 А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
