--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     <div class="features__images">
         <picture class="features__image features__image--1">
           <source media="(min-width: 960px)" srcset="img/iphone-screen-1-desktop@1x.png 1x, img/iphone-screen-1-desktop@2x.png 2x">
-          <img src="img/iphone-screen-mobile@1x.png" alt="Smartphone">
+          <img src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x" alt="Smartphone">
         </picture>
         <picture class="features__image features__image--2">
           <source media="(min-width: 960px)" srcset="img/iphone-screen-2-desktop@1x.png 1x, img/iphone-screen-2-desktop@2x.png 2x">
-          <img src="img/iphone-screen-mobile@1x.png" alt="Smartphone">
+          <img src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x" alt="Smartphone">
         </picture>
         <picture class="features__image features__image--3">
           <source media="(min-width: 960px)" srcset="img/iphone-screen-3-desktop@1x.png 1x, img/iphone-screen-3-desktop@2x.png 2x">
