add pp for tablet-index

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
           <li class="services-package__slide slider__slide">
             <ul class="services-package__slide-structure">
               <li class="services-package__service-name">
-                <h3>Меньше</h3>
-                <span>3,99 USD</span>
+                <h3>База</h3>
+                <span>1,99 USD</span>
               </li>
               <li class="services-package__service services-package__service--included"><span>Розовый фильтр</span></li>
-              <li class="services-package__service services-package__service--included"><span>Смайлики</span></li>
+              <li class="services-package__service services-package__service--deleted"><span>Смайлики</span></li>
               <li class="services-package__service services-package__service--deleted"><span>Коментарии</span></li>
             </ul>
           </li>
@@ -180,15 +180,15 @@
                 <span>3,99 USD</span>
               </li>
               <li class="services-package__service services-package__service--included"><span>Розовый фильтр</span></li>
-              <li class="services-package__service services-package__service--deleted"><span>Смайлики</span></li>
+              <li class="services-package__service services-package__service--included"><span>Смайлики</span></li>
               <li class="services-package__service services-package__service--deleted"><span>Коментарии</span></li>
             </ul>
           </li>
           <li class="services-package__slide slider__slide">
             <ul class="services-package__slide-structure">
               <li class="services-package__service-name">
-                <h3>Больше</h3>
-                <span>3,99 USD</span>
+                <h3>Анлим</h3>
+                <span>9,99 USD</span>
               </li>
               <li class="services-package__service services-package__service--included"><span>Розовый фильтр</span></li>
               <li class="services-package__service services-package__service--included"><span>Смайлики</span></li>
