add pp for index-desktop

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="british-fact__wrapper block-wrapper">
         <div class="british-fact-content">
           <h2 class="british-fact-header">Эффект на 24 часа!</h2>
-          <p class="british-fact-text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложениядлится целые сутки!</p>
+          <p class="british-fact-text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
           <a href="" class="british-fact-link">Узнать больше об исследовании</a>
         </div>
       </div>
@@ -205,7 +205,7 @@
     </section>
 
     <section class="contacts block-wrapper">
-      <p class="contacts__slogan">Остались вопросы?<br>
+      <p class="contacts__slogan">Остались вопросы?
       Свяжитесь с нами!</p>
       <div class="contacts__wrapper">
         <div class="contacts__item contacts__item--phone-number">
