--- a/photo.html
+++ b/photo.html
@@ -50,7 +50,7 @@
             <article class="gallery__item gallery__item--panorama">
               <picture class="gallery__photo">
                 <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
-                <source media="(min-width: 640px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@1x.jpg 2x">
+                <source media="(min-width: 640px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
                 <img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" alt="Panorama">
               </picture>
               <div class="gallery__content-wrapper">
@@ -147,7 +147,7 @@
                 <picture class="gallery__photo">
                   <source media="(min-width: 960px)" srcset="img/photo-6-desktop@1x.jpg 1x, img/photo-6-desktop@2x.jpg 2x">
                   <source media="(min-width: 640px)" srcset="img/photo-6-tablet@1x.jpg 1x, img/photo-6-tablet@2x.jpg 2x">
-                  <img src="img/photo-6-mobile@1x.jpg" srcset="photo-6-mobile@2x.jpg 2x" alt="Flight">
+                  <img src="img/photo-6-mobile@1x.jpg" srcset="img/photo-6-mobile@2x.jpg 2x" alt="Flight">
                 </picture>
               <div class="gallery__content-wrapper">
               <header class="gallery__item-header">
