add pp for tablet-gallery

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     </div>
   </main>
 
-  <footer class="page-footer page-footer--hidden">
+  <footer class="page-footer page-footer--hidden page-footer--clean">
     <picture>
       <source media="(min-width: 960px)" srcset="img/logo-pink-blue-desktop.svg">
       <img class="page-footer__app-logo" width="147" height="41" src="img/logo-pink-blue-mobile.svg"
