fixes for header

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             </ul>
           </div>
         </nav>
+        <div class="header__wrapper"></div>
     </header>
 
     <main class="main-container">
