--- a/form.html
+++ b/form.html
@@ -53,11 +53,11 @@
         <div class="competition-form__block competition-form__block--1">
           <div class="competition-form__text-input-wrapper">
             <label for="surname" class="competition-form__label-up">Фамилия:</label>
-            <input type="text" class="competition-form__text-input" name="surname" id="surname" placeholder="Укажите фамилию">
+            <input type="text" class="competition-form__text-input" name="surname" id="surname" placeholder="Укажите фамилию *">
           </div>
           <div class="competition-form__text-input-wrapper">
             <label for="name" class="competition-form__label-up">Имя:</label>
-            <input type="text" class="competition-form__text-input" name="name" id="name" placeholder="Введите ваше имя">
+            <input type="text" class="competition-form__text-input" name="name" id="name" placeholder="Введите ваше имя *">
           </div>
           <div class="competition-form__text-input-wrapper">
             <label for="patronym" class="competition-form__label-up">Отчество:</label>
@@ -98,22 +98,22 @@
         <div class="competition-form__block competition-form__block--3">
           <h2 class="competition-form__block-header">Контактная информация</h2>
           <div class="competition-form__text-input-wrapper contest-form__text-input-wrapper--phone">
-            <label for="phone-m" class="competition-form__label-up competition-form__label-up--mobile-view">Номерок телефончика</label>
+            <label for="phone-m" class="competition-form__label-up competition-form__label-up--mobile-view">Номер телефона</label>
             <input type="tel" class="competition-form__text-input competition-form__text-input--mobile-view" name="phone" id="phone-m" placeholder="Номер, пожалуйста">
             <div class="competition-form__input-wrapper">
                 <input type="tel" class="competition-form__text-input competition-form__text-input--other-view" name="phone" id="phone" placeholder="+7 XXX XXX-XX-XX">
                 <div class="competition-form__input-decor competition-form__input-decor--phone"></div>
             </div>
-            <label for="phone" class="competition-form__label-up competition-form__label-up--other-view">Номер телефона</label>
+            <label for="phone" class="competition-form__label-up competition-form__label-up--other-view">Номерок телефончика</label>
           </div>
           <div class="competition-form__text-input-wrapper contest-form__text-input-wrapper--mail">
-            <label for="mail-m" class="competition-form__label-up competition-form__label-up--mobile-view">Адресок почты</label>
-            <input type="email" class="competition-form__text-input competition-form__text-input--mobile-view" name="mail" id="mail-m" placeholder="E-mail, пожалуйста">
+            <label for="mail-m" class="competition-form__label-up competition-form__label-up--mobile-view">Адрес почты</label>
+            <input type="email" class="competition-form__text-input competition-form__text-input--mobile-view" name="mail" id="mail-m" placeholder="Введите почту *">
             <div class="competition-form__input-wrapper">
-                <input type="email" class="competition-form__text-input competition-form__text-input--other-view" name="mail" id="mail" placeholder="Введите почту">
+                <input type="email" class="competition-form__text-input competition-form__text-input--other-view" name="mail" id="mail" placeholder="E-mail, пожалуйста">
                 <div class="competition-form__input-decor competition-form__input-decor--mail"></div>
             </div>
-            <label for="mail" class="competition-form__label-up competition-form__label-up--other-view">Адрес почты</label>
+            <label for="mail" class="competition-form__label-up competition-form__label-up--other-view">Адресок почты</label>
           </div>
         </div>
 
@@ -132,7 +132,7 @@
         <div class="competition-form__block competition-form__block--5">
           <div class="competition-form__block-wrapper">
           <h2 class="competition-form__block-header">Опишите свои эмоции</h2>
-          <textarea name="emotions-decr" id="emotions_descr" rows="6" cols="24" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+          <textarea name="emotions-decr" id="emotions_descr" rows="5" cols="24" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </div>
         </div>
         <div class="competition-form__submit-wrapper">
@@ -175,7 +175,7 @@
         <button class="modal__button">Ok</button>
     </div>
 
-    <div class="modal modal--success">
+    <div class="modal modal--success" style="display:none">
         <h3 class="modal__title">Ваша заявка отправлена</h3>
         <p class="modal__content">Спасибо за ваше участие, ваша заявка уже поступила к нам.
             В ближайшее время мы рассмотрим ее и оповестим вас.</p>
