--- a/photo.html
+++ b/photo.html
@@ -168,7 +168,7 @@
         </section>
           <section class="photo-constructor">
             <form class="photo-constructor__form block-wrapper">
-                <picture class="gallery__photo">
+                <picture class="photo-constructor__photo">
                     <source media="(min-width: 960px)" srcset="img/photo-7-desktop@1x.jpg 1x, img/photo-7-desktop@2x.jpg 2x">
                     <source media="(min-width: 640px)" srcset="img/photo-7-tablet@1x.jpg 1x, img/photo-7-tablet@2x.jpg 2x">
                     <img  class="photo-constructor__constructor-object" src="img/photo-7-mobile@1x.jpg" src="img/photo-7-mobile@2x.jpg 2x" width="280" height="374" alt="Winter">
